[gd_scene format=3 uid="uid://dsjtoq57s78y6"]

[ext_resource type="Script" uid="uid://btfkhxegt31ik" path="res://world/player/player.gd" id="1_bvkkv"]
[ext_resource type="Texture2D" uid="uid://dxotka7sicu1l" path="res://assets/textures/temporaryPlayer.png" id="2_cvtd2"]
[ext_resource type="PackedScene" uid="uid://c37b7ydq2nrlk" path="res://systems/inventory/inventory.tscn" id="2_et4on"]
[ext_resource type="PackedScene" uid="uid://cllcphk0k7wx8" path="res://world/interactables/interaction_field.tscn" id="3_cvtd2"]
[ext_resource type="PackedScene" uid="uid://834qgegb5pgc" path="res://systems/crafting/crafter.tscn" id="3_duds0"]
[ext_resource type="Script" uid="uid://cigr60qq0xek4" path="res://data/craft_recipes/CraftRecipe.gd" id="4_d3e1v"]
[ext_resource type="Resource" uid="uid://c3iriustqa4g1" path="res://data/craft_recipes/campfire.tres" id="5_4br6r"]
[ext_resource type="PackedScene" uid="uid://epcwklg6i4ni" path="res://ui/game/popups/interact_popup.tscn" id="5_duds0"]
[ext_resource type="Script" uid="uid://dw42ydma8hux1" path="res://systems/sound/sound_pool.gd" id="6_sndpl"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bvkkv"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = false
properties/1/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_40qjc"]
atlas = ExtResource("2_cvtd2")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_et4on"]
atlas = ExtResource("2_cvtd2")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_duds0"]
atlas = ExtResource("2_cvtd2")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_thypd"]
atlas = ExtResource("2_cvtd2")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3e1v"]
atlas = ExtResource("2_cvtd2")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4br6r"]
atlas = ExtResource("2_cvtd2")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvkkv"]
atlas = ExtResource("2_cvtd2")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvtd2"]
atlas = ExtResource("2_cvtd2")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljdef"]
atlas = ExtResource("2_cvtd2")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x47q"]
atlas = ExtResource("2_cvtd2")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n4qb"]
atlas = ExtResource("2_cvtd2")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_myh4x"]
atlas = ExtResource("2_cvtd2")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_80mbn"]
atlas = ExtResource("2_cvtd2")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbm61"]
atlas = ExtResource("2_cvtd2")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrep8"]
atlas = ExtResource("2_cvtd2")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1k4r"]
atlas = ExtResource("2_cvtd2")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_scey4"]
atlas = ExtResource("2_cvtd2")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn377"]
atlas = ExtResource("2_cvtd2")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxa5a"]
atlas = ExtResource("2_cvtd2")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq3gs"]
atlas = ExtResource("2_cvtd2")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnw2l"]
atlas = ExtResource("2_cvtd2")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy2m5"]
atlas = ExtResource("2_cvtd2")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tckbl"]
atlas = ExtResource("2_cvtd2")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sacbj"]
atlas = ExtResource("2_cvtd2")
region = Rect2(240, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ljdef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40qjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et4on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duds0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thypd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3e1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4br6r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvkkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvtd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljdef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x47q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n4qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myh4x")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80mbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbm61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrep8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1k4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scey4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn377")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxa5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq3gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnw2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy2m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tckbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sacbj")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bvkkv"]
radius = 6.0
height = 20.0

[node name="Player" type="CharacterBody2D" unique_id=524976522]
collision_mask = 8
script = ExtResource("1_bvkkv")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." unique_id=1316071739]
replication_config = SubResource("SceneReplicationConfig_bvkkv")

[node name="Inventory" parent="." unique_id=1273046441 instance=ExtResource("2_et4on")]

[node name="Crafter" parent="." unique_id=724726434 instance=ExtResource("3_duds0")]
recipies = Array[ExtResource("4_d3e1v")]([ExtResource("5_4br6r")])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1503866388]
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_ljdef")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=957849651]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_bvkkv")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1451487643]
zoom = Vector2(3, 3)

[node name="InteractionField" parent="." unique_id=1182964430 instance=ExtResource("3_cvtd2")]

[node name="RayCasts" type="Node2D" parent="." unique_id=100000001]

[node name="North" type="RayCast2D" parent="RayCasts" unique_id=100000002]
target_position = Vector2(0, -300)
collision_mask = 13

[node name="NorthEast" type="RayCast2D" parent="RayCasts" unique_id=100000003]
target_position = Vector2(212, -212)
collision_mask = 13

[node name="East" type="RayCast2D" parent="RayCasts" unique_id=100000004]
target_position = Vector2(300, 0)
collision_mask = 13

[node name="SouthEast" type="RayCast2D" parent="RayCasts" unique_id=100000005]
target_position = Vector2(212, 212)
collision_mask = 13

[node name="South" type="RayCast2D" parent="RayCasts" unique_id=100000006]
target_position = Vector2(0, 300)
collision_mask = 13

[node name="SouthWest" type="RayCast2D" parent="RayCasts" unique_id=100000007]
target_position = Vector2(-212, 212)
collision_mask = 13

[node name="West" type="RayCast2D" parent="RayCasts" unique_id=100000008]
target_position = Vector2(-300, 0)
collision_mask = 13

[node name="NorthWest" type="RayCast2D" parent="RayCasts" unique_id=100000009]
target_position = Vector2(-212, -212)
collision_mask = 13

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=616254280]

[node name="InteractPopup" parent="CanvasLayer" unique_id=1397782255 instance=ExtResource("5_duds0")]
unique_name_in_owner = true

[node name="SoundPool" type="Node" parent="." unique_id=200000001]
script = ExtResource("6_sndpl")

[connection signal="near_interactable" from="InteractionField" to="." method="_on_interaction_field_near_interactable"]
[connection signal="no_interactables" from="InteractionField" to="." method="_on_interaction_field_no_interactables"]
